--- a/NetGame Server/NetGame Server.vcxproj
+++ b/NetGame Server/NetGame Server.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Common.c" />
+    <ClCompile Include="GameLogic.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="ServerFramework.c" />
   </ItemGroup>
