--- a/NetGame Server/NetGame Server.vcxproj.filters
+++ b/NetGame Server/NetGame Server.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ServerFramework.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GameLogic.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
