--- a/NetGame Server/NetGame Server.vcxproj
+++ b/NetGame Server/NetGame Server.vcxproj
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Common.c" />
-    <ClCompile Include="GameLogic.c" />
-    <ClCompile Include="main.c" />
-    <ClCompile Include="ServerFramework.c" />
+    <ClCompile Include="Common.cpp" />
+    <ClCompile Include="GameLogic.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ServerFramework.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
